--- a/templates/simple_locations/index.html
+++ b/templates/simple_locations/index.html
@@ -19,57 +19,38 @@
     <script src="{{MEDIA_URL}}simple_locations/javascripts/simple_locations.js" type="text/javascript">
     </script>
     <script language="javascript">
-        //make sure map is a global variable
-        var map;
-        $(document).ready(function() {
+      //make sure map is a global variable
+      var map;
 
-            $("#tree a ").hover(function() {
+      function refresh_tree() {
+        $('#tree').load("/simple_locations/render_tree");
+      }
 
-
-                $(this).find('img').show();
-            }, function() {
-                $(this).find('img').hide();
-            }
-
-
-                    );
-
-        });
-
-
+      $(document).ready(function() {
+        refresh_tree();
+      });
     </script>
 
     {{ form.media }}
-
 
     <link rel="stylesheet" href="{{ MEDIA_URL }}simple_locations/css/tree.css" type="text/css"/>
     <script src="{{ MEDIA_URL }}simple_locations/javascripts/tree.js" type="text/javascript"></script>
 {% endblock %}
 
 {% block left %}
-
-
-
-
     <div class="module" style="min-height:220px;">
         {{ form.errors }}
         <form method="post" action="/simple_locations/edit/" style="border:0px;" data-remote=true>
-            <h2>All Locations</h2>
+        <h2>All Locations</h2>
 
-            <div class="scrollable">
-
-
-                {% include 'simple_locations/treepanel.html' %}
-
-
-            </div>
-            {{ form.pk }}
-
+        <div class="scrollable">
+          <ul class="root" id="tree">
+          </ul>
+        </div>
+        {{ form.pk }}
     </div>
     <div class="module" style="width:800px; clear:both;float:left;margin-top:10px;">
         <h2 style="width:800px;">Location Details</h2>
-
-
         {{ form.point }}
     </div>
 
@@ -105,8 +86,6 @@
                 <td><input type='submit' value='update' disabled="disabled" data-disable_with="Editing..."
                            id="edit_submit" name="update" class="confirm"/><a
                         href="simple_locations/cancel">&nbsp;&nbsp;&nbsp;Cancel</a></td>
-
-
             </tr>
             </form>
         </table>
