added more fixme comments

--- a/templates/simple_locations/treepanel.html
+++ b/templates/simple_locations/treepanel.html
@@ -2,6 +2,7 @@
 {% load mptt_tags %}
 {% recursetree nodes %}
   <li>
+      <!-- FIXME: re-incorporate expand-collapse with silk icons for expand and collapse -->
       <!-- FIXME: Why is this input needed here? -->
       <input style="display:none;"
              type='checkbox'
