--- a/static/css/tree.css
+++ b/static/css/tree.css
@@ -12,15 +12,9 @@ list-style-type:none;
 }
 #tree li { 
 display:block;
-margin-left:18px;
+margin-left:-4px;
 background:url(tree-default-line.gif) -7px 0px no-repeat;
 padding-left:2px;
-margin-left: -16px;
-
-
-}
-
-#tree ul { 
 white-space:nowrap;
 
 
@@ -42,8 +36,44 @@ ul.hidden{
 	
 	}
 
-.tree-open > ul { display:block;
-} 
+#tree ul{
+	padding-left:-4px;
+	
+	}
+	
+#tree .collapse{
+	background: url(../images/plus.gif) 0px 0px no-repeat;
+	margin-left:-5px;
+	margin-top:10px;
+	width:20px;
+	background-color: white;
+	
+	
+	
+	}
+#tree .expand{
+	background: url(../images/minus.gif) 0px 0px no-repeat;
+	margin-left:-5px;
+	margin-top:10px;
+	width:20px;
+	background-color: white;
+	
+	
+	
+	}
+	.collapse a{
+	margin-left:7px;
+	
+	}
+	
+	.expand a{
+	margin-left:7px;
+	
+	}
+#tree .collapse img{
+	
+	z-index:9089;
+	}
 #tree a:focus { 
 	outline: none; 
 	}
@@ -51,10 +81,7 @@ body > *[selected="true"] {
     display: block;
 }
 
-input.text{
-  margin:0.5em 0;
-  width: 300px; padding:5px; 
-}
+
 .scrollable {
   display:block;
   width:100%;
@@ -100,4 +127,10 @@ input.text{
     border:none;
     width:16px;
     height:16px;
+}
+span.errors{
+color: #f00;
+font-style: italic;
+font-weight: bold;
+	
 }
