--- a/templates/simple_locations/location_edit.html
+++ b/templates/simple_locations/location_edit.html
@@ -6,28 +6,44 @@
 {% csrf_token %}
 <table border="0" width="100%" class="form_table">
     <tr>
-      <td colspan="2"><!-- FIXME: let's format these errors nicely -->{{ form.errors }}</td>
-    </tr>
-    <tr>
         <td>Name:</td>
-        <td>{{ form.name }}{{ form.pk }}</td>
+        <td>{{ form.name }}{{ form.pk }}</td><td>{{form.name.errors}}</td>
     </tr>
     <tr>
         <td>Code:</td>
-        <td>{{ form.code }}</td>
+        <td>{{ form.code }}</td><td>{{ form.code.errors }}</td>
     </tr>
     <tr>
         <td>Lat:</td>
-        <td id="lat">{{ form.lat }}</td>
+        <td id="lat">{{ form.lat }}</td> <td>{{ form.lat.errors }}</td>
+		
     </tr>
     <tr>
         <td>Lon:</td>
-        <td id="lon">{{ form.lon }}</td>
+        <td id="lon">{{ form.lon }}</td> <td>{{ form.lon.errors }}</td>
     </tr>
+           <script language="javascript">
+               $('#lat input,#lon input').change(function() {
+
+                   var lat=   parseFloat($('#lat input')[0].value) ;
+                   var lon=parseFloat($('#lon input')[0].value)  ;
+
+                   if((lat <=90 && lat>=-90)  && (lon <=180 && lon>=-180 ))
+                   {
+
+                        var point = new GLatLng(lat, lon);
+                        map.setCenter(point, 4);
+                   }
+    }   );
+           </script>
+	<tr>
+		<td>Kind:</td>
+		<td>{{form.kind}}</td>  <td>{{form.kind.errors}}</td>
+		</tr>
     {% if not nodes|length_is:"0" %}
     <tr>
         <td>{{ form.move_choice }}Move:
-        <td>{{ form.position }} &nbsp;&nbsp;&nbsp;Of:{{ form.target }}</td>
+        <td>{{ form.position }} &nbsp;&nbsp;&nbsp;Of:{{ form.target }}</td> <td>{{form.position.errors}} </td>
     </tr>
     {% endif %}
     <tr>
@@ -46,7 +62,7 @@
             </a>
         {% endif %}
         </div>
-        </td>
+        </td> <td></td>
     </tr>
 </table>
 </form>
