--- a/templates/simple_locations/treepanel.html
+++ b/templates/simple_locations/treepanel.html
@@ -1,51 +1,90 @@
-<ul class="root">
 {% load mptt_tags %}
-{% recursetree nodes %}
-  <li>
-      <!-- FIXME: re-incorporate expand-collapse with silk icons for expand and collapse -->
-      <!-- FIXME: Why is this input needed here? -->
-      <input style="display:none;"
-             type='checkbox'
-             id="{{ node.id }}"
-             value="{{ node.id }}"
-             name='location'/>
-      <span id="span_{{ node.id }}">
+
+<ul class="root" id="tree">
+    {% recursetree nodes %}
+
+    <li id="test">
+     
+      <span id="span_{{ node.id }}"  {% if not node.is_leaf_node %}class="collapse"{%endif%}  >
       <a id="anchor_{{ node.id }}"
          style="padding-left:5px;" onClick="load_edit_location({{ node.id }})" href='javascript:void(0)'>
           {{ node.name }}
       </a>
-      <img style="display:none;cursor:pointer;" border='0' 
+	  <script type="text/javascript">
+          $('#anchor_{{ node.id }}').(
+                  function() {
+                      $(this).find('img').show();
+                  },
+                  function() {
+                      $(this).find('img').hide();
+                  }
+                  );
+      </script>
+      <img style="display:none;cursor:pointer;" border='0'
            onclick="delete_location({{ node.id }})" src='/static/simple_locations/images/delete.png'/>      
       </span>
-      <script type="text/javascript">
-        $('#span_{{ node.id }}').hover(
-          function() {
-            $(this).find('img').show();
-          },
-          function() {
-            $(this).find('img').hide();
-          }
-        );
-      </script>
-      <!--  FIXME: are these dictionaries needed? -->
-      <!-- load the tree dictionaries for parent-child and child-parent lookups -->
-      <script type="text/javascript">
-          children[{{ node.id }}] = [{% for child in node.get_children %}{{ child.id }},{% endfor %}];
-          {% if node.parent %}
-              parent[{{ node.id }}] = "{{ node.parent.id }}";
-          {% endif %}
-      </script>
-      <ul class="children">
-          {% if not node.is_leaf_node %}
-              {{ children }}
-          {% endif %}
-          <li>
-              <a style="font-size:10px;padding-left:5px;"
-                 href="javascript:load_add_location_child({{ node.id }})">
-                  Add New
-              </a>
-          </li>
-      </ul>
-  </li>
-{% endrecursetree %}
+        <script type="text/javascript">
+            $('#span_{{ node.id }}').hover(
+                    function() {
+                        $(this).find('img').show();
+                    },
+                    function() {
+                        $(this).find('img').hide();
+                    }
+                    );
+        </script>
+
+        <ul class="children" style="display:none;">
+            {% if not node.is_leaf_node %}
+            {{ children }}
+            {% endif %}
+            <li >
+                <a style="font-size:10px;padding-left:5px;"
+                   href="javascript:load_add_location_child({{ node.id }})" id="add_{{ node.id }}">
+                    Add New
+                </a>
+            </li>
+        </ul>
+     
+        {% endrecursetree %}
+    </li>
+    <script language="javascript">
+        collapse();
+        function expand() {
+
+            $('span.expand').css('background-image', '/static/simple_locations/images/minus.gif').each(function() {
+                $(this).click(function()
+                {
+                    $(this).next().hide();
+                    $(this).removeClass('expand').addClass('collapse');
+                    collapse();
+
+                }
+
+
+                        );
+
+
+            });
+        }
+        function collapse()
+        {
+            $('span.collapse').css('background-image', '/static/simple_locations/images/plus.gif').each(function() {
+                $(this).click(function()
+                {
+                    $(this).next().show();
+                    $(this).removeClass('collapse').addClass('expand');
+                    expand();
+
+
+                }
+
+
+                        );
+
+
+            });
+        }
+
+    </script>
 </ul>
