--- a/templates/simple_locations/location_edit.html
+++ b/templates/simple_locations/location_edit.html
@@ -7,39 +7,43 @@
 <table border="0" width="100%" class="form_table">
     <tr>
         <td>Name:</td>
-        <td>{{ form.name }}{{ form.pk }}</td><td>{{form.name.errors}}</td>
+        <td>{{ form.name }}{{ form.pk }}</td>
+        <td>{{form.name.errors}}</td>
     </tr>
     <tr>
         <td>Code:</td>
-        <td>{{ form.code }}</td><td>{{ form.code.errors }}</td>
+        <td>{{ form.code }}</td>
+        <td>{{ form.code.errors }}</td>
     </tr>
     <tr>
         <td>Lat:</td>
-        <td id="lat">{{ form.lat }}</td> <td>{{ form.lat.errors }}</td>
-		
+        <td id="lat">{{ form.lat }}</td>
+        <td>{{ form.lat.errors }}</td>
     </tr>
     <tr>
         <td>Lon:</td>
-        <td id="lon">{{ form.lon }}</td> <td>{{ form.lon.errors }}</td>
+        <td id="lon">{{ form.lon }}</td>
+        <td>
+            {{ form.lon.errors }}
+            <script language="javascript">
+               $('#lat input,#lon input').change(
+                    function() {
+                        var lat = parseFloat($('#lat input')[0].value);
+                        var lon = parseFloat($('#lon input')[0].value);
+                        if((lat <=90 && lat>=-90)  && (lon <=180 && lon>=-180 )) {
+                            var point = new GLatLng(lat, lon);
+                            map.setCenter(point, 4);
+                        }
+                    }
+               );
+            </script>
+        </td>
     </tr>
-           <script language="javascript">
-               $('#lat input,#lon input').change(function() {
-
-                   var lat=   parseFloat($('#lat input')[0].value) ;
-                   var lon=parseFloat($('#lon input')[0].value)  ;
-
-                   if((lat <=90 && lat>=-90)  && (lon <=180 && lon>=-180 ))
-                   {
-
-                        var point = new GLatLng(lat, lon);
-                        map.setCenter(point, 4);
-                   }
-    }   );
-           </script>
 	<tr>
 		<td>Kind:</td>
-		<td>{{form.kind}}</td>  <td>{{form.kind.errors}}</td>
-		</tr>
+		<td>{{form.kind}}</td>
+		<td>{{form.kind.errors}}</td>
+	</tr>
     {% if not nodes|length_is:"0" %}
     <tr>
         <td>{{ form.move_choice }}Move:
@@ -47,7 +51,7 @@
     </tr>
     {% endif %}
     <tr>
-        <td colspan="2">
+        <td colspan="3">
         <div class="buttons">
         {% if item %}
             <a href="javascript:void(0)" onclick="save_location(this);" id="save_{{ item.pk }}" class="positive">
@@ -62,7 +66,7 @@
             </a>
         {% endif %}
         </div>
-        </td> <td></td>
+        </td>
     </tr>
 </table>
 </form>
