--- a/templates/simple_locations/location_edit.html
+++ b/templates/simple_locations/location_edit.html
@@ -6,26 +6,29 @@
 {% csrf_token %}
 <table border="0" width="100%" class="form_table">
     <tr>
+    
         <td>Name:</td>
         <td>{{ form.name }}{{ form.pk }}</td>
-        <td>{{form.name.errors}}</td>
+        <td class="errors">{{form.name.errors}}</td>
     </tr>
     <tr>
         <td>Code:</td>
         <td>{{ form.code }}</td>
-        <td>{{ form.code.errors }}</td>
+        <td class="errors">{{ form.code.errors }}</td>
     </tr>
     <tr>
         <td>Lat:</td>
         <td id="lat">{{ form.lat }}</td>
-        <td>{{ form.lat.errors }}</td>
+        <td class="errors">{{ form.lat.errors }}</td>
     </tr>
     <tr>
         <td>Lon:</td>
         <td id="lon">{{ form.lon }}</td>
-        <td>
+        <td class="errors">
             {{ form.lon.errors }}
-            <script language="javascript">
+            
+        </td>
+		<script language="javascript">
                $('#lat input,#lon input').change(
                     function() {
                         var lat = parseFloat($('#lat input')[0].value);
@@ -33,21 +36,21 @@
                         if((lat <=90 && lat>=-90)  && (lon <=180 && lon>=-180 )) {
                             var point = new GLatLng(lat, lon);
                             map.setCenter(point, 4);
+                            map_marker.setLatLng(point); 
                         }
                     }
                );
             </script>
-        </td>
     </tr>
 	<tr>
 		<td>Kind:</td>
 		<td>{{form.kind}}</td>
-		<td>{{form.kind.errors}}</td>
+		<td class="errors">{{form.kind.errors}}</td>
 	</tr>
     {% if not nodes|length_is:"0" %}
     <tr>
         <td>{{ form.move_choice }}Move:
-        <td>{{ form.position }} &nbsp;&nbsp;&nbsp;Of:{{ form.target }}</td> <td>{{form.position.errors}} </td>
+        <td>{{ form.position }} &nbsp;&nbsp;&nbsp;Of:{{ form.target }}</td> <td class="errors">{{form.position.errors}} </td>
     </tr>
     {% endif %}
     <tr>
